syntax = "proto3";

package sui.rpc.v2;

import "google/protobuf/timestamp.proto";

service NameService {
  rpc LookupName(LookupNameRequest) returns (LookupNameResponse);
  rpc ReverseLookupName(ReverseLookupNameRequest) returns (ReverseLookupNameResponse);
}

message LookupNameRequest {
  optional string name = 1;
}

message LookupNameResponse {
  optional NameRecord record = 1;
}

message ReverseLookupNameRequest {
  optional string address = 1;
}

message ReverseLookupNameResponse {
  optional NameRecord record = 1;
}

message NameRecord {
  optional string id = 1;
  optional string name = 2;
  optional string registration_nft_id = 3;
  optional google.protobuf.Timestamp expiration_timestamp = 4;
  optional string target_address = 5;
  map<string, string> data = 6;
}
